--- a/index.html
+++ b/index.html
@@ -25,21 +25,23 @@
     </div>
     <div class="row-rects">
       <div class="subscription">
-        <p class="reg-text">
-          <h3>Monthly Subscription</h3>
-        
-
-          &dollar;29 per month
-      
-          <p>Full access for less than &dollar;1 a day</p>
-        </p>
-        <div class="button">
-          <button class="signup">Sign Up</button> 
+        <h3>Monthly Subscription</h3>
+        <div class="side-text">
+          <p class="money">
+            &dollar;29
+          </p> 
+          <p class="side">
+            per month
+          </p>
         </div>
+        <p class="reg-text">
+          Full access for less than &dollar;1 a day</p>
+        </p>
+        <button class="button">Sign Up</button> 
       </div>  
       <div class="whyus">
+        <h3>Why Us</h3>
         <p class="reg-text">
-          <h3>Why Us</h3>
           <ul>
             <li>Tutorials by industry experts</li>
             <li>Peer &amp; expert code review</li>
